appmesh/sample-app-foo-virtual-service.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: sample-app-foo
  namespace: app
spec:
  awsName: sample-app-foo.skill53.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: sample-app-foo-router
